recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: type mismatch;
 found   : Unit
 required: Int
		return;
                ^length:5: error: not enough arguments for method apply: (n: Int)Int in trait LinearSeqOptimized.
Unspecified value parameter n.
		return 1+length(l.tail());
                                      ^